# simple-port-forward

./: Cargo.toml  README.md  justfile
.github/install-scripts/: LICENSE
.github/workflows/: release.yaml
examples/: config_1.toml
src/: cli.rs  config.rs  main.rs  tcp_proxy.rs  udp_proxy.rs
