[package]
name = "simple-port-forward"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
num_cpus = "1.16.0"
normalize-path = "0.2.1"