[package]
name = "simple-port-forward"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
num_cpus = "1.17.0"
normalize-path = "0.2.1"
